--- a/.github/workflows/functional-test-template.yml
+++ b/.github/workflows/functional-test-template.yml
@@ -20,7 +20,7 @@ jobs:
           uses: actions/checkout@v3
           with:
             repository: elastic-analytics/opensearch-dashboards-functional-test
-            ref: playground
+            ref: playground-preview
 
         - name: Step 0 - Install dependencies for functional test
           run: |
@@ -38,6 +38,18 @@ jobs:
           run: |
             yarn cypress run --spec "cypress/integration/playground/dashboards/*.js" --config "baseUrl=${{inputs.endpoint}}" --env "openSearchUrl=${{inputs.endpoint}},SECURITY_ENABLED=true,username=${{secrets.osd-user}},password=${{secrets.osd-user-password}}"
 
+        - name: Step 3 - Add moviegeek dashboard
+          run: |
+            curl -XPOST ${{inputs.endpoint}}/api/saved_objects/_import -H 'osd-xsrf: true' --form file=@cypress/dashboards/moviegeekdashboard.ndjson -k -u ${{secrets.osd-user}}:${{secrets.osd-user-password}}
+
+        - name: Step 4 - Add metricsbeat dashboard
+          run: |
+            curl -XPOST ${{inputs.endpoint}}/api/saved_objects/_import -H 'osd-xsrf: true' --form file=@cypress/dashboards/metricbeat-eks-overview.ndjson -k -u ${{secrets.osd-user}}:${{secrets.osd-user-password}}
+
+        - name: Step 5 - Add introduction dashboard
+          run: |
+            curl -XPOST ${{inputs.endpoint}}/api/saved_objects/_import -H 'osd-xsrf: true' --form file=@cypress/dashboards/introduction-dashboard-searchapps.ndjson -k -u ${{secrets.osd-user}}:${{secrets.osd-user-password}}
+
   Plugins:
     runs-on: ubuntu-latest
     needs: OSD-Functional-Test-OSD
@@ -51,7 +63,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: elastic-analytics/opensearch-dashboards-functional-test
-        ref: playground
+        ref: playground-preview
     - name: Install dependencies for functional test
       run: |
         npm install
@@ -79,7 +91,7 @@ jobs:
     - name: Run Functional Test For Observability
       if:  ${{ matrix.run == 'OSD-Functional-Test-Observability' }}
       run: |
-        yarn cypress run --spec "cypress/integration/playground/plugins/playground_observability*.js" --config "baseUrl=${{inputs.endpoint}}" --env "openSearchUrl=${{inputs.endpoint}},SECURITY_ENABLED=true,username=${{secrets.osd-user}},password=${{secrets.osd-user-password}}"
+        yarn cypress run --spec "cypress/integration/playground/plugins/playground_observability_full.js" --config "baseUrl=${{inputs.endpoint}}" --env "openSearchUrl=${{inputs.endpoint}},SECURITY_ENABLED=true,username=${{secrets.osd-user}},password=${{secrets.osd-user-password}}"
 
     - name: Run Functional Test For Index Management
       if:  ${{ matrix.run == 'OSD-Functional-Test-IndexMan' }}
