add new searchapp
Signed-off-by: Tao Liu <liutaoaz@amazon.com>

--- a/.github/workflows/deployment-template.yml
+++ b/.github/workflows/deployment-template.yml
@@ -47,7 +47,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Step 1 - Replace Tokens for helm chart configuration
-        if: ${{ inputs.deploy-env == 'preview' }}
+        if: ${{ (inputs.deploy-env == 'preview') || (inputs.deploy-env == 'searchapps') }}
         uses: cschleiden/replace-tokens@v1
         with:
           files: '["${{ github.workspace }}/config/playground/helm/${{inputs.deploy-env}}/helm-opensearch-dashboards.yaml"]'
@@ -71,10 +71,10 @@ jobs:
           KIBANASERVER: ${{ secrets.kibanaserver }}
 
       - name: Step 3 - Replace Tokens for logstash configuration
-        if: ${{ inputs.deploy-env == 'preview' }}
+        if: ${{ (inputs.deploy-env == 'preview') || (inputs.deploy-env == 'searchapps') }}
         uses: cschleiden/replace-tokens@v1
         with:
-          files: '["${{ github.workspace }}/config/playground/metrics/logstash/${{inputs.deploy-env}}/logstash.yaml"]'
+          files: '["${{ github.workspace }}/config/playground/metrics/logstash/preview/logstash.yaml"]'
           tokenPrefix: '${'
           tokenSuffix: '}'
         env:
@@ -82,10 +82,10 @@ jobs:
           OSD_USER_PASSWORD: ${{ secrets.osd_user_password }}
 
       - name: Step 4 - Replace Tokens for tracing configuration
-        if: ${{ inputs.deploy-env == 'preview' }}
+        if: ${{ (inputs.deploy-env == 'preview') || (inputs.deploy-env == 'searchapps') }}
         uses: cschleiden/replace-tokens@v1
         with:
-          files: '["${{ github.workspace }}/config/playground/metrics/tracing/${{inputs.deploy-env}}/otel-config.yaml"]'
+          files: '["${{ github.workspace }}/config/playground/metrics/tracing/preview/otel-config.yaml"]'
           tokenPrefix: '${'
           tokenSuffix: '}'
         env:
@@ -102,7 +102,7 @@ jobs:
           aws-region: ${{ secrets.region }}
 
       - name: Step 6 - Delete Logstash
-        if: ${{ inputs.deploy-env == 'preview' }}
+        if: ${{ (inputs.deploy-env == 'preview') || (inputs.deploy-env == 'searchapps') }}
         uses: elastic-analytics/dashboards-action@main
         env:
           KUBE_CONFIG_DATA: ${{ secrets.kube-config }}
@@ -112,17 +112,17 @@ jobs:
             kubectl delete ns logstash
 
       - name: Step 7 - Delete Tracing
-        if: ${{ inputs.deploy-env == 'preview' }}
+        if: ${{ (inputs.deploy-env == 'preview') || (inputs.deploy-env == 'searchapps') }}
         uses: elastic-analytics/dashboards-action@main
         env:
           KUBE_CONFIG_DATA: ${{ secrets.kube-config }}
         with:
           plugins: ""
           command: |
-            kubectl delete -f config/playground/metrics/tracing/${{inputs.deploy-env}}/jaeger-agent.yaml
-            kubectl delete -f config/playground/metrics/tracing/${{inputs.deploy-env}}/otel-config.yaml
-            kubectl delete -f config/playground/metrics/tracing/${{inputs.deploy-env}}/otel-collector.yaml
-            kubectl delete -f config/playground/metrics/tracing/${{inputs.deploy-env}}/data-prepper.yaml
+            kubectl delete -f config/playground/metrics/tracing/preview/jaeger-agent.yaml
+            kubectl delete -f config/playground/metrics/tracing/preview/otel-config.yaml
+            kubectl delete -f config/playground/metrics/tracing/preview/otel-collector.yaml
+            kubectl delete -f config/playground/metrics/tracing/preview/data-prepper.yaml
 
       - name: Step 8 - Deploy OpenSearch and OpenSearch Dashboards By Helm Chart
         uses: elastic-analytics/dashboards-action@main
@@ -145,7 +145,7 @@ jobs:
             helm install dashboards opensearch/opensearch-dashboards -f config/playground/helm/${{inputs.deploy-env}}/helm-opensearch-dashboards.yaml
 
       - name: Step 9 - Install Logstash
-        if: ${{ inputs.deploy-env == 'preview' }}
+        if: ${{ (inputs.deploy-env == 'preview') || (inputs.deploy-env == 'searchapps') }}
         uses: elastic-analytics/dashboards-action@main
         env:
           KUBE_CONFIG_DATA: ${{ secrets.kube-config }}
@@ -153,18 +153,18 @@ jobs:
           plugins: ""
           command: |
             kubectl create ns logstash
-            kubectl create -f config/playground/metrics/logstash/${{inputs.deploy-env}}/logstash-configmap.yaml
-            kubectl apply -f config/playground/metrics/logstash/${{inputs.deploy-env}}/logstash.yaml
+            kubectl create -f config/playground/metrics/logstash/preview/logstash-configmap.yaml
+            kubectl apply -f config/playground/metrics/logstash/preview/logstash.yaml
 
       - name: Step 10 - Install Tracing
-        if: ${{ inputs.deploy-env == 'preview' }}
+        if: ${{ (inputs.deploy-env == 'preview') || (inputs.deploy-env == 'searchapps') }}
         uses: elastic-analytics/dashboards-action@main
         env:
           KUBE_CONFIG_DATA: ${{ secrets.kube-config }}
         with:
           plugins: ""
           command: |
-            kubectl apply -f config/playground/metrics/tracing/${{inputs.deploy-env}}/jaeger-agent.yaml
-            kubectl create -f config/playground/metrics/tracing/${{inputs.deploy-env}}/otel-config.yaml
-            kubectl apply -f config/playground/metrics/tracing/${{inputs.deploy-env}}/otel-collector.yaml
-            kubectl apply -f config/playground/metrics/tracing/${{inputs.deploy-env}}/data-prepper.yaml
+            kubectl apply -f config/playground/metrics/tracing/preview/jaeger-agent.yaml
+            kubectl create -f config/playground/metrics/tracing/preview/otel-config.yaml
+            kubectl apply -f config/playground/metrics/tracing/preview/otel-collector.yaml
+            kubectl apply -f config/playground/metrics/tracing/preview/data-prepper.yaml
