--- a/.github/workflows/os-osd-deployment-scheduled.yml
+++ b/.github/workflows/os-osd-deployment-scheduled.yml
@@ -24,8 +24,8 @@ jobs:
       kube-config: ${{ secrets.KUBE_CONFIG_DATA_PREVIEW }}
       openid_client_id: ${{ secrets.OPENID_CLIENT_ID }}
       openid_client_secret: ${{ secrets.OPENID_CLIENT_SECRET }}
-      openid_base_redirect_url: ${{ secrets.OPENID_LOGOUT_URL }}
-      openid_logout_url: ${{ secrets.OPENID_BASE_REDIRECT_URL }}
+      openid_base_redirect_url: ${{ secrets.OPENID_BASE_REDIRECT_URL }}
+      openid_logout_url: ${{ secrets.OPENID_LOGOUT_URL }}
       ga-tracking-id: ${{ secrets.GA_TRACKING_ID }}
       osd_user: ${{ secrets.OSD_USER }}
       osd_user_password: ${{ secrets.OSD_USER_PASSWORD }}
