Up version helm chart and docker (#130)
* allow specifying plugins in helm chart

Signed-off-by: Lu Yu <nluyu@amazon.com>

* update to 2.4.1

Signed-off-by: Lu Yu <nluyu@amazon.com>

* install plugins from helm chart for searchapp

Signed-off-by: Lu Yu <nluyu@amazon.com>

Signed-off-by: Lu Yu <nluyu@amazon.com>

--- a/config/playground/helm/dev/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/dev/helm-opensearch-dashboards.yaml
@@ -9,7 +9,7 @@ opensearchHosts: "https://opensearch-cluster-leader:9200"
 replicaCount: 2
 
 image:
-  repository: "opensearchplayground/opensearch-dashboards"
+  repository: "opensearchproject/opensearch-dashboards"
   # override image tag, which is .Chart.AppVersion by default
   tag: "latest"
   # Always/Never/IfNotPresent
@@ -150,3 +150,8 @@ affinity: {}
 
 # -- Array of extra K8s manifests to deploy
 extraObjects: []
+
+# specify the plugin to install
+plugins:
+  enabled: true
+  installList: ["https://github.com/BionIT/google-analytics-plugin/releases/download/2.4.1/googleAnalytics-2.4.1.zip"]
