switch workflow to use branch and add retries
Signed-off-by: Lu Yu <nluyu@amazon.com>

--- a/.github/workflows/os-osd-deployment.yml
+++ b/.github/workflows/os-osd-deployment.yml
@@ -60,7 +60,7 @@ jobs:
 
   OSD-Functional-Test-Dev:
         needs: OS-OSD-Dev-Deployment
-        uses: opensearch-project/dashboards-anywhere/.github/workflows/functional-test-template.yml@main
+        uses: opensearch-project/dashboards-anywhere/.github/workflows/functional-test-template.yml@addft
         with:
           endpoint: https://playground.opensearch.oss.aws.dev
         secrets:
