--- a/config/playground/helm/dev/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/dev/helm-opensearch-dashboards.yaml
@@ -151,7 +151,7 @@ affinity: {}
 # -- Array of extra K8s manifests to deploy
 extraObjects: []
 
-# specify the plugins to install
+# specify the external plugins to install
 plugins:
   enabled: true
   installList: ["https://github.com/BionIT/google-analytics-plugin/releases/download/2.4.1/googleAnalytics-2.4.1.zip"]
