--- a/.github/workflows/functional-test-template.yml
+++ b/.github/workflows/functional-test-template.yml
@@ -43,8 +43,8 @@ jobs:
     needs: OSD-Functional-Test-OSD
     strategy:
       fail-fast: false
-      matrix: 
-        run: ['OSD-Functional-Test-AD', 'OSD-Functional-Test-Alert', 'OSD-Functional-Test-Notifications', 'OSD-Functional-Test-Reports', 'OSD-Functional-Test-Observability', 'OSD-Functional-Test-IndexMan']
+      matrix:
+        run: ['OSD-Functional-Test-AD', 'OSD-Functional-Test-Alert', 'OSD-Functional-Test-Notifications', 'OSD-Functional-Test-Reports', 'OSD-Functional-Test-Observability', 'OSD-Functional-Test-IndexMan', 'OSD-Functional-Test-SecurityAnalytics']
     steps:
     - run: echo Run ${{ matrix.run }}
     - name: Checkout functional test repo
@@ -85,3 +85,8 @@ jobs:
       if:  ${{ matrix.run == 'OSD-Functional-Test-IndexMan' }}
       run: |
         yarn cypress run --spec "cypress/integration/playground/plugins/playground_index*.js" --config "baseUrl=${{inputs.endpoint}}" --env "openSearchUrl=${{inputs.endpoint}},SECURITY_ENABLED=true,username=${{secrets.osd-user}},password=${{secrets.osd-user-password}}"
+
+    - name: Run Functional Test For Security Analytics
+      if: ${{ matrix.run == 'OSD-Functional-Test-SecurityAnalytics' }}
+      run: |
+        yarn cypress run --spec "cypress/integration/playground/plugins/playground_security_analytics*.js" --config "baseUrl=${{inputs.endpoint}}" --env "openSearchUrl=${{inputs.endpoint}},SECURITY_ENABLED=true,username=${{secrets.osd-user}},password=${{secrets.osd-user-password}}"
