--- a/config/playground/helm/dev/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/dev/helm-opensearch-dashboards.yaml
@@ -79,10 +79,10 @@ config:
     opensearchDashboards.branding.useExpandedHeader: false
 
     #Content security policy(csp) settings
-    csp.rules: [ "connect-src 'self' www.google-analytics.com maps.opensearch.org;" ]
+    csp.rules: [ "connect-src 'self' www.google-analytics.com maps.opensearch.org tiles.maps.opensearch.org;" ]
     csp.warnLegacyBrowsers: false
     # Google analytics plugin settings
-    google_analytics_plugin.enabled: false
+    google_analytics_plugin.trackingID: ${GA_TRACKING_ID}
 
 priorityClassName: ""
 
@@ -154,4 +154,4 @@ extraObjects: []
 # specify the external plugins to install
 plugins:
   enabled: true
-  installList: ["https://github.com/BionIT/google-analytics-plugin/releases/download/2.4.1/googleAnalytics-2.4.1.zip"]
+  installList: ["https://github.com/BionIT/google-analytics-plugin/releases/download/2.5.0/googleAnalytics-2.5.0.zip"]
