--- a/config/playground/helm/searchapps/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/searchapps/helm-opensearch-dashboards.yaml
@@ -98,7 +98,7 @@ config:
     opensearch_security.openid.logout_url: ${OPENID_LOGOUT_URL}
 
     # Content security policy(csp) settings
-    csp.rules: ["connect-src 'self' www.google-analytics.com maps.opensearch.org;"]
+    csp.rules: ["connect-src 'self' www.google-analytics.com vectors.maps.opensearch.org tiles.maps.opensearch.org maps.opensearch.org;"]
     csp.warnLegacyBrowsers: false
     google_analytics_plugin.trackingID: ${GA_TRACKING_ID}
 
@@ -172,4 +172,4 @@ extraObjects: []
 # specify the plugin to install
 plugins:
   enabled: true
-  installList: ["https://github.com/BionIT/google-analytics-plugin/releases/download/2.4.1/googleAnalytics-2.4.1.zip"]
+  installList: ["https://github.com/BionIT/google-analytics-plugin/releases/download/2.5.0/googleAnalytics-2.5.0.zip"]
