--- a/config/playground/helm/preview/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/preview/helm-opensearch-dashboards.yaml
@@ -9,9 +9,9 @@ opensearchHosts: "https://opensearch-cluster-leader:9200"
 replicaCount: 3
 
 image:
-  repository: "opensearchplayground/opensearch-dashboards"
+  repository: "opensearchproject/opensearch-dashboards"
   # override image tag, which is .Chart.AppVersion by default
-  tag: "2.4.0-11282022"
+  tag: "latest"
   pullPolicy: "Always"
 
 imagePullSecrets: []
@@ -98,7 +98,7 @@ config:
     opensearch_security.openid.logout_url: ${OPENID_LOGOUT_URL}
 
     # Content security policy(csp) settings
-    csp.rules: ["connect-src 'self' www.google-analytics.com maps.opensearch.org;"]
+    csp.rules: [ "connect-src 'self' www.google-analytics.com vectors.maps.opensearch.org tiles.maps.opensearch.org maps.opensearch.org;" ]
     csp.warnLegacyBrowsers: false
     google_analytics_plugin.trackingID: ${GA_TRACKING_ID}
 
@@ -168,3 +168,8 @@ affinity: {}
 
 # -- Array of extra K8s manifests to deploy
 extraObjects: []
+
+# specify the external plugins to install
+plugins:
+  enabled: true
+  installList: ["https://github.com/BionIT/google-analytics-plugin/releases/download/2.5.0/googleAnalytics-2.5.0.zip"]
