--- a/config/playground/helm/ml/helm-machinelearning.yaml
+++ b/config/playground/helm/ml/helm-machinelearning.yaml
@@ -2,7 +2,7 @@
 clusterName: "opensearch-cluster"
 nodeGroup: "machinelearning"
 
-# The service that non master groups will try to connect to when joining the cluster.
+# The service that non master groups will try to connect to when joining the cluster
 # This should be set to clusterName + "-" + nodeGroup for your master group
 masterService: "opensearch-cluster-leader"
 
