--- a/.github/workflows/functional-test-template.yml
+++ b/.github/workflows/functional-test-template.yml
@@ -20,7 +20,7 @@ jobs:
           uses: actions/checkout@v3
           with:
             repository: elastic-analytics/opensearch-dashboards-functional-test
-            ref: playground
+            ref: playground-preview
 
         - name: Step 0 - Install dependencies for functional test
           run: |
@@ -38,20 +38,36 @@ jobs:
           run: |
             yarn cypress run --spec "cypress/integration/playground/dashboards/*.js" --config "baseUrl=${{inputs.endpoint}}" --env "openSearchUrl=${{inputs.endpoint}},SECURITY_ENABLED=true,username=${{secrets.osd-user}},password=${{secrets.osd-user-password}}"
 
+        - name: Step 3 - Add moviegeek dashboard
+          run: |
+            curl -XPOST ${{inputs.endpoint}}/api/saved_objects/_import -H 'osd-xsrf: true' --form file=@cypress/dashboards/moviegeekdashboard.ndjson -k -u ${{secrets.osd-user}}:${{secrets.osd-user-password}}
+
+        - name: Step 4 - Add metricsbeat dashboard
+          run: |
+            curl -XPOST ${{inputs.endpoint}}/api/saved_objects/_import -H 'osd-xsrf: true' --form file=@cypress/dashboards/metricbeat-eks-overview.ndjson -k -u ${{secrets.osd-user}}:${{secrets.osd-user-password}}
+
+        - name: Step 5 - Add introduction dashboard
+          run: |
+            curl -XPOST ${{inputs.endpoint}}/api/saved_objects/_import -H 'osd-xsrf: true' --form file=@cypress/dashboards/introduction-dashboard.ndjson -k -u ${{secrets.osd-user}}:${{secrets.osd-user-password}}
+
+        - name: Step 6 - Add multiple datasource dashboard
+          run: |
+            curl -XPOST ${{inputs.endpoint}}/api/saved_objects/_import?overwrite=true -H 'osd-xsrf: true' --form file=@cypress/dashboards/multiple-data-sources-sample.ndjson -k -u ${{secrets.osd-user}}:${{secrets.osd-user-password}}
+
   Plugins:
     runs-on: ubuntu-latest
     needs: OSD-Functional-Test-OSD
     strategy:
       fail-fast: false
       matrix:
-        run: ['OSD-Functional-Test-AD', 'OSD-Functional-Test-Alert', 'OSD-Functional-Test-Notifications', 'OSD-Functional-Test-Reports', 'OSD-Functional-Test-Observability', 'OSD-Functional-Test-IndexMan', 'OSD-Functional-Test-SecurityAnalytics']
+        run: ['OSD-Functional-Test-AD', 'OSD-Functional-Test-Alert', 'OSD-Functional-Test-Notifications', 'OSD-Functional-Test-Reports', 'OSD-Functional-Test-Observability', 'OSD-Functional-Test-IndexMan']
     steps:
     - run: echo Run ${{ matrix.run }}
     - name: Checkout functional test repo
       uses: actions/checkout@v3
       with:
         repository: elastic-analytics/opensearch-dashboards-functional-test
-        ref: playground
+        ref: playground-preview
     - name: Install dependencies for functional test
       run: |
         npm install
@@ -79,14 +95,9 @@ jobs:
     - name: Run Functional Test For Observability
       if:  ${{ matrix.run == 'OSD-Functional-Test-Observability' }}
       run: |
-        yarn cypress run --spec "cypress/integration/playground/plugins/playground_observability*.js" --config "baseUrl=${{inputs.endpoint}}" --env "openSearchUrl=${{inputs.endpoint}},SECURITY_ENABLED=true,username=${{secrets.osd-user}},password=${{secrets.osd-user-password}}"
+        yarn cypress run --spec "cypress/integration/playground/plugins/playground_observability_cluster.js" --config "baseUrl=${{inputs.endpoint}}" --env "openSearchUrl=${{inputs.endpoint}},SECURITY_ENABLED=true,username=${{secrets.osd-user}},password=${{secrets.osd-user-password}}"
 
     - name: Run Functional Test For Index Management
       if:  ${{ matrix.run == 'OSD-Functional-Test-IndexMan' }}
       run: |
         yarn cypress run --spec "cypress/integration/playground/plugins/playground_index*.js" --config "baseUrl=${{inputs.endpoint}}" --env "openSearchUrl=${{inputs.endpoint}},SECURITY_ENABLED=true,username=${{secrets.osd-user}},password=${{secrets.osd-user-password}}"
-
-    - name: Run Functional Test For Security Analytics
-      if: ${{ matrix.run == 'OSD-Functional-Test-SecurityAnalytics' }}
-      run: |
-        yarn cypress run --spec "cypress/integration/playground/plugins/playground_security_analytics*.js" --config "baseUrl=${{inputs.endpoint}}" --env "openSearchUrl=${{inputs.endpoint}},SECURITY_ENABLED=true,username=${{secrets.osd-user}},password=${{secrets.osd-user-password}}"
