--- a/.github/workflows/os-osd-deployment.yml
+++ b/.github/workflows/os-osd-deployment.yml
@@ -4,7 +4,7 @@ name: Deploy OpenSearch and OpenSearch Dashboards
 
 on:
   push:
-    branches: [ main ]
+    branches: [ playground-md0209 ]
   # adds workflow_dispatch for manually running a workflow
   workflow_dispatch:
 
@@ -23,6 +23,7 @@ jobs:
       - uses: dorny/paths-filter@v2
         id: filter
         with:
+          base: playground-md0209
           # creates filters to check if any dev or prod changes
           filters: |
             dev:
