--- a/.github/workflows/os-osd-deployment.yml
+++ b/.github/workflows/os-osd-deployment.yml
@@ -36,7 +36,7 @@ jobs:
   OS-OSD-Dev-Deployment:
     needs: Pre-Deployment
     if:  ${{ needs.Pre-Deployment.outputs.config_change_dev == 'true' }}
-    uses:  opensearch-project/dashboards-anywhere/.github/workflows/deployment-template.yml@main
+    uses:  opensearch-project/dashboards-anywhere/.github/workflows/deployment-template.yml@release-2.6
     with:
       helm-repo: https://opensearch-project.github.io/helm-charts/
       deploy-env: dev
