remove the dev change
Signed-off-by: Tao Liu <liutaoaz@amazon.com>

--- a/config/playground/helm/dev/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/dev/helm-opensearch-dashboards.yaml
@@ -10,7 +10,7 @@ replicaCount: 2
 
 image:
   repository: "opensearchproject/opensearch-dashboards"
-  # override image tag, which is .Chart.AppVersion by default.
+  # override image tag, which is .Chart.AppVersion by default
   tag: "latest"
   # Always/Never/IfNotPresent
   pullPolicy: "Always"
@@ -154,4 +154,4 @@ extraObjects: []
 # specify the external plugins to install
 plugins:
   enabled: true
-  installList: ["https://github.com/BionIT/google-analytics-plugin/releases/download/2.6.0/googleAnalytics-2.6.0.zip"]
+  installList: ["https://github.com/BionIT/google-analytics-plugin/releases/download/2.5.0/googleAnalytics-2.5.0.zip"]
