--- a/.github/workflows/functional-test-template.yml
+++ b/.github/workflows/functional-test-template.yml
@@ -50,9 +50,9 @@ jobs:
           run: |
             curl -XPOST ${{inputs.endpoint}}/api/saved_objects/_import -H 'osd-xsrf: true' --form file=@cypress/dashboards/introduction-dashboard-observability.ndjson -k -u ${{secrets.osd-user}}:${{secrets.osd-user-password}}
 
-        - name: Step 6 - Add multiple datasource dashboard
+        - name: Step 6 - Add Nginx dashboard
           run: |
-            curl -XPOST ${{inputs.endpoint}}/api/saved_objects/_import?overwrite=true -H 'osd-xsrf: true' --form file=@cypress/dashboards/multiple-data-sources-sample.ndjson -k -u ${{secrets.osd-user}}:${{secrets.osd-user-password}}
+            curl -XPOST ${{inputs.endpoint}}/api/saved_objects/_import?overwrite=true -H 'osd-xsrf: true' --form file=@cypress/dashboards/NGINX-Core-Logs.ndjson -k -u ${{secrets.osd-user}}:${{secrets.osd-user-password}}
 
   Plugins:
     runs-on: ubuntu-latest
