--- a/config/playground/helm/ml/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/ml/helm-opensearch-dashboards.yaml
@@ -78,6 +78,8 @@ config:
     opensearchDashboards.branding.useExpandedHeader: false
     # Enable multiple datasource
     data_source.enabled: true
+    # Enable ml_commons_dashboards
+    ml_commons_dashboards.enabled: true
     # Content security policy(csp) settings
     csp.rules: [ "connect-src 'self' www.google-analytics.com vectors.maps.opensearch.org tiles.maps.opensearch.org maps.opensearch.org;" ]
     csp.warnLegacyBrowsers: false
@@ -153,4 +155,4 @@ extraObjects: []
 # specify the external plugins to install
 plugins:
   enabled: true
-  installList: ["https://github.com/BionIT/google-analytics-plugin/releases/download/2.5.0/googleAnalytics-2.5.0.zip"]
+  installList: ["https://github.com/BionIT/google-analytics-plugin/releases/download/2.6.0/googleAnalytics-2.6.0.zip"]
