add new pink cluster
Signed-off-by: Tao Liu <liutaoaz@amazon.com>

--- a/config/playground/helm/pink/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/pink/helm-opensearch-dashboards.yaml
@@ -19,7 +19,7 @@ nameOverride: ""
 fullnameOverride: ""
 
 serviceAccount:
-  # Specifies whether a service account should be created
+  # Specifies whether a service account should be created.
   create: true
   # Annotations to add to the service account
   annotations: {}
